# LEADNGN

./: .replit  CURRENT_STATUS.md  EMAIL_TRACKING_OVERVIEW.md  FEATURE_OVERVIEW.md  IMPLEMENTATION_SUMMARY.md  OLLAMA_SETUP.md  PROJECT_STRUCTURE.md  README.md  STRATEGIC_FEATURES_OVERVIEW.md  account_intelligence.py  ai_provider_manager.py  app.py  app_backup.py  business_directories.py  db.sqlite3  download_spacy_model.py  email_deliverability.py  fix_imports.py  fix_mirrorbot.py  inspect_mirrorbot.py  lead_audit.py  lead_revalidation.py  list_installed.py  live_lead_scraper.py  models.py  notifications.py  phone_integration.py  pyproject.toml  rag_system.py  rag_system_ollama.py  rag_system_openai.py  real_scrapers.py  replit.md  scrapers.py  seed_data.py  system_verification.py  system_verification_results.json  test_live_scraper.py  test_system.py  working_lead_scraper.py
attached_assets/: Pasted-Let-s-adapt-your-LeadNGN-system-to-work-with-Ollama-and-Mistral-7B-Step-1-Install-Ollama-Python-Cl-1753395067244_1753395067245.txt  Pasted-Step-1-Email-Tracking-System-First-let-s-create-the-database-tables-for-tracking-sql-Email-trac-1753393629201_1753393629201.txt  Pasted-Step-1-Update-Your-Database-Schema-First-let-s-add-new-fields-to-handle-the-consultant-approach--1753392861525_1753392861526.txt  Pasted-Step-1-Update-Your-Database-Schema-First-let-s-add-new-fields-to-handle-the-consultant-approach-s-1753392697113_1753392697114.txt  Pasted-Strengths-and-High-Value-Elements-Strategic-AI-Differentiators-Dual-AI-Provider-Support-OpenAI--1749452491345_1749452491345.txt  README.md  __init__.py  __main___UPDATED.py  comparisons_UPDATED.py  components_UPDATED.py  constants_UPDATED.py  corpus_UPDATED.py  mirrorbot_UPDATED.py  preprocessors_UPDATED.py  pyproject.toml  response_selection_UPDATED.py  search_UPDATED.py  tagging_UPDATED.py  trainers_UPDATED.py  utils_UPDATED.py  vectorstores_UPDATED.py
bot/: __init__.py  advanced_learning.py  advanced_logic_adapters.py  comparisons.py  context_manager.py  conversation.py  custom_chatbot.py  emotion_manager.py  emotional_logic_adapter.py  learning_accelerator.py  logic_adapter_base.py  logic_adapters.py  memory_manager.py  preprocessors.py  sentiment_analyzer.py  storage_adapters.py  utils.py
features/: __init__.py  analytics_dashboard.py  bulk_operations.py  competitive_analysis.py  compliance_manager.py  consultant_approach.py  data_validation.py  email_templates.py  email_tracking.py  ollama_integration.py
instance/: mirrorbot.db
scrapers/: __init__.py  data_enrichment.py  enhanced_scraper.py  integration.py  lead_scraper.py
static/css/: style.css
static/js/: chat.js  emotion_display.js  learning.js  voice.js
templates/: base.html  dashboard.html  enhanced_scraping_demo.html  index.html  lead_detail.html  lead_detail_enhanced.html  leads.html  leads_simple.html  memory.html  new_scraping.html  scraping.html  scraping_broken.html  scraping_result.html
utils/: __init__.py  lead_audit.py  lead_revalidation.py
