[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "dnspython>=2.7.0",
    "email-validator>=2.2.0",
    "fake-useragent>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "lxml>=5.4.0",
    "mirrorbot>=1.3",
    "openai>=1.78.1",
    "psycopg2-binary>=2.9.10",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.32.3",
    "selenium>=4.33.0",
    "setuptools>=80.4.0",
    "spacy>=3.8.5",
    "sqlalchemy>=2.0.40",
    "trafilatura>=2.0.0",
    "twilio>=9.6.0",
    "werkzeug>=3.1.3",
]
